Task jd01_12 B2, B3 completed. Task jd01_13 A, B, C tasks completed. calcA completed.